data/derived/sp14/progs/unify/prog3007.ml.out
Characters 90-91:
  | (t :: h :: [])  -> h :: listReverse t::[];;
                                        ^
Error: This expression has type 'a but an expression was expected of type
         'a list
       The type variable 'a occurs inside 'a list
